--- a/config.toml
+++ b/config.toml
@@ -1,3 +1,7 @@
 title = "Peter Stace's Personal Blog"
 baseurl = "http://peterstace.io/"
 theme = "petsta"
+
+[taxonomies]
+tag = "tags"
+category = "categories"
